--- a/bio.html
+++ b/bio.html
@@ -35,7 +35,7 @@
                     ><i class="fa-brands fa-linkedin fa-2x"></i
                 ></a>
             </aside>
-
+            <h1 style="color: #e10903">Bio</h1>
             <section class="bio-hero">
                 <div>
                     <h1 style="color: #e10903">About me</h1>
