--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,9 @@
                 </div>
             </section>
         </main>
-
+        <footer>
+            <p>&copy; Olena Pelagenko. All Rights Reserved.</p>
+        </footer>
         <script src="index.js"></script>
     </body>
 </html>
