--- a/bio.html
+++ b/bio.html
@@ -59,14 +59,16 @@
 
                 <div>
                     <h3 style="color: #e10903">I am good at ...</h3>
-                    <p>
-                        # JavaScript, TypeScript, React, Python, Knex, Postgres,
-                        GitHub, jQuery, HTML, CSS, Bootstrap, SQL, Rest Apis
-                    </p>
-                    <p># Hardworking and self disciplined lifelong learner</p>
-                    <p># Excellent analytical and problem solving skills</p>
-                    <p># Languages: English, Ukrainian, Russian</p>
-
+                    <ul>
+                        <li>JavaScript, TypeScript, React</li>
+                        <li>Python, Knex, Postgres, Rest APIs</li>
+                        <li>GitHub, jQuery, HTML, CSS, Bootstrap, SQL</li>
+                        <li>
+                            Hardworking and self disciplined lifelong learner
+                        </li>
+                        <li>Excellent analytical and problem solving skills</li>
+                        <li>Languages: English, Ukrainian, Russian</li>
+                    </ul>
                     <h3 style="color: #e10903">Things that make me happy</h3>
                     <p>
                         My family, random kindness, working code, good books,
